--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -33,7 +33,7 @@ html {
   
     display: flex;
     align-items: flex-start;
-    font-family: Sourc-sans-pro;
+    font-family: Source-sans-pro;
     margin-right: 45px;
 }
 
